# nn_cpp

./: CMakeLists.txt  README.md
examples/: BasicMLP.cpp  IrisTest.cpp
nn/: Net.h
nn/layers/: Dense.h  Layer.h  Layers.h  Relu.h  Softmax.h
nn/loss/: CrossEntropy.h  HuberLoss.h  Losses.h  MeanSquaredError.h
nn/optimizers/: AdamImpl.h  OptimizerImpl.h  Optimizers.h  StochasticGradientDescentImpl.h
nn/utils/: WeightInitializers.h
tests/: LossTests.cpp  NetTests.cpp
